; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_info_create.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_info_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_info = type { %struct.socket_info* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.socket_info* @socket_info_create(%struct.socket_info* %0) #0 {
  %2 = alloca %struct.socket_info*, align 8
  %3 = alloca %struct.socket_info*, align 8
  store %struct.socket_info* %0, %struct.socket_info** %2, align 8
  %4 = call %struct.socket_info* @skynet_malloc(i32 8)
  store %struct.socket_info* %4, %struct.socket_info** %3, align 8
  %5 = load %struct.socket_info*, %struct.socket_info** %3, align 8
  %6 = call i32 @memset(%struct.socket_info* %5, i32 0, i32 8)
  %7 = load %struct.socket_info*, %struct.socket_info** %2, align 8
  %8 = load %struct.socket_info*, %struct.socket_info** %3, align 8
  %9 = getelementptr inbounds %struct.socket_info, %struct.socket_info* %8, i32 0, i32 0
  store %struct.socket_info* %7, %struct.socket_info** %9, align 8
  %10 = load %struct.socket_info*, %struct.socket_info** %3, align 8
  ret %struct.socket_info* %10
}

declare dso_local %struct.socket_info* @skynet_malloc(i32) #1

declare dso_local i32 @memset(%struct.socket_info*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
